# autofram

./: .env.example  .gitignore  CLAUDE.md  COMMS.md  Dockerfile  README.md  bootstrap.sh  entrypoint.sh  launcher.sh  pyproject.toml  refresh_token.py
contracts_completed/: 001-hello-world-endpoint.md
projects/: kittens.txt
scripts/: clean_start.sh  refresh_token.py
spec/: SPEC.md  SPEC_AGENT_SDK.md  WHITEPAPER_DOCMEM.md
specs/: WHITEPAPER_DOCMEM.md
src/autofram/: __init__.py  agent.py  contracts.py  filesystem.py  git.py  logger_out.py  runner.py  server.py  tools.py  watcher.py
static/prompts/: CODING.md  CONTRACTOR.md  SYSTEM.md
tests/: __init__.py  test_contracts.py  test_filesystem.py  test_git.py  test_runner.py  test_server.py  test_tools.py  test_watcher.py
